# warp

./: .clang-format  .gitignore  Cargo.toml  Makefile  README  README.md
docs/: ARCHITECTURE.md  NOTES.md  WARP_GAUGE.md  WIREGUARD_OVER_WARP.md  warp-direct-reason.excalidraw  warp-map.excalidraw  warp-tunnel.excalidraw  wireguard-over-warp.excalidraw
warp/: Cargo.toml  config.hpp  error.hpp  log.hpp  main.cpp  receiver.hpp  sample_client.cpp  transmitter.hpp  tunnel.hpp
warp-config/: Cargo.toml
warp-config/src/: lib.rs  print_example_config.rs  serdes.rs
warp-gauge/: Cargo.toml
warp-gauge/src/: main.rs
warp-gauge/src/inspector/: histogram.rs  mod.rs  shaded_range.rs  time_series.rs
warp-gf256/: Cargo.toml
warp-gf256/benches/: scalar_product.rs
warp-gf256/src/: lib.rs  lut.rs  matrix.rs  simd.rs
warp-map/: Cargo.toml
warp-map/src/: main.rs  map.rs
warp-mpscpq/: Cargo.toml
warp-mpscpq/benches/: priority_queue_bench.rs
warp-mpscpq/src/: lib.rs
warp-protocol/: Cargo.toml
warp-protocol-derive/: Cargo.toml
warp-protocol-derive/src/: lib.rs
warp-protocol/benches/: payload_encryption.rs
warp-protocol/src/: codec.rs  crypto.rs  lib.rs  messages.rs
warp/iour/: README  actions.hpp  iour.cpp  iour.hpp
warp/src/: generate_key.rs  interface.rs  main.rs  routing.rs  tunnel.rs
