[package]
name = "warp-config"
version = "0.1.0"
edition = "2024"

[lib]
src = "src/lib.rs"

[[bin]]
name = "warp-print-example-config"
path = "src/print_example_config.rs"

[dependencies]
serde = { version = "~1", features = ["derive"] }
toml = "~0"
regex = "~1"
warp-protocol = { path = "../warp-protocol" }