[package]
name = "warp-gauge"
version = "0.1.0"
edition = "2024"
default-run = "warp-gauge"

[[bin]]
name = "warp-gauge"
path = "src/main.rs"

[dependencies]
bincode = { version = "~2", features = ["serde"] }
tokio = { version = "1", features = ["full", "tracing"] }
futures = "~0"
clap = { version = "~4", features = ["derive", "env"] }
anyhow = "~1"
egui = "~0"
egui_plot = "~0"
eframe = "~0"
csv = "~1"
serde = { version = "~1", features = ["derive"] }
rfd = "~0"