[package]
name = "warp-map"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "warp-map"
path = "src/main.rs"

[dependencies]
console-subscriber = "~0"
bincode = { version = "~2", features = ["serde"] }
tokio = { version = "1", features = ["full", "tracing"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }

warp-protocol = { path = "../warp-protocol" }
