[package]
name = "warp-mpscpq"
version = "0.1.0"
edition = "2021"
description = "Multi-producer single-consumer priority queue built on tokio"
authors = ["Warp Team"]

[dependencies]
tokio = { version = "1", features = ["sync"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "priority_queue_bench"
harness = false